// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/integrations/AbstractOAuthApp > should have correct state when updateTrusted is called 1`] = `
<div>
  <div
    class="backstage-content"
  >
    <div
      class="backstage-header"
    >
      <h1>
        <a
          href="/test/integrations/oauth2-apps"
        >
          OAuth 2.0 Applications
        </a>
        <span
          class="backstage-header__divider"
        >
          <i
            class="fa fa-angle-right"
            title="Breadcrumb Icon"
          />
        </span>
        Header
      </h1>
    </div>
    <div
      class="backstage-form"
    >
      <div
        class="integration__icon"
      >
        <img
          alt="integration icon"
          src="https://test.com/icon"
        />
      </div>
      <form
        class="form-horizontal"
      >
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="is_public"
          >
            Is Public Client
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <label
              class="radio-inline"
            >
              <input
                name="is_public"
                type="radio"
                value="true"
              />
              Yes
            </label>
            <label
              class="radio-inline"
            >
              <input
                checked=""
                name="is_public"
                type="radio"
                value="false"
              />
              No
            </label>
            <div
              class="form__help"
            >
              If true, the OAuth 2.0 application is a public client (no client secret). Public clients must use PKCE for authorization. If false, the application is a confidential client with a client secret.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="name"
          >
            Display Name
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <input
              class="form-control"
              id="name"
              maxlength="64"
              type="text"
              value="testApp"
            />
            <div
              class="form__help"
            >
              Specify the display name of your OAuth 2.0 application. You can use up to 64 characters.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="description"
          >
            Description
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <input
              class="form-control"
              id="description"
              maxlength="512"
              type="text"
              value="testing"
            />
            <div
              class="form__help"
            >
              Describe your OAuth 2.0 application.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="homepage"
          >
            Homepage
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <input
              class="form-control"
              id="homepage"
              maxlength="256"
              type="url"
              value="https://test.com"
            />
            <div
              class="form__help"
            >
              This is the URL for the homepage of the OAuth 2.0 application. Depending on your server configuration, use HTTP or HTTPS in your URL.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="icon_url"
          >
            Icon URL
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <input
              class="form-control"
              id="icon_url"
              maxlength="512"
              type="url"
              value="https://test.com/icon"
            />
            <div
              class="form__help"
            >
              (Optional) Specify the URL of the image for your OAuth 2.0 application. Use either HTTP or HTTPS in the URL.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="callbackUrls"
          >
            Callback URLs (One Per Line)
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <textarea
              class="form-control"
              id="callbackUrls"
              maxlength="1024"
              rows="3"
            >
              https://test.com/callback
https://test.com/callback2
            </textarea>
            <div
              class="form__help"
            >
              Specify the URIs to which the service redirects users after accepting or denying them authorization to your application, and handles authorization codes or access tokens. It must start with http:// or https://.
            </div>
          </div>
        </div>
        <div
          class="backstage-form__footer"
        >
          <a
            class="btn btn-tertiary"
            href="/test/integrations/oauth2-apps"
          >
            Cancel
          </a>
          <button
            class="btn btn-primary"
            id="saveOauthApp"
            type="submit"
          >
            Footer
          </button>
          <div>
            renderExtra
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/integrations/AbstractOAuthApp > should match snapshot 1`] = `
<div>
  <div
    class="backstage-content"
  >
    <div
      class="backstage-header"
    >
      <h1>
        <a
          href="/test/integrations/oauth2-apps"
        >
          OAuth 2.0 Applications
        </a>
        <span
          class="backstage-header__divider"
        >
          <i
            class="fa fa-angle-right"
            title="Breadcrumb Icon"
          />
        </span>
        Header
      </h1>
    </div>
    <div
      class="backstage-form"
    >
      <div
        class="integration__icon"
      >
        <img
          alt="integration icon"
          src="https://test.com/icon"
        />
      </div>
      <form
        class="form-horizontal"
      >
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="is_public"
          >
            Is Public Client
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <label
              class="radio-inline"
            >
              <input
                name="is_public"
                type="radio"
                value="true"
              />
              Yes
            </label>
            <label
              class="radio-inline"
            >
              <input
                checked=""
                name="is_public"
                type="radio"
                value="false"
              />
              No
            </label>
            <div
              class="form__help"
            >
              If true, the OAuth 2.0 application is a public client (no client secret). Public clients must use PKCE for authorization. If false, the application is a confidential client with a client secret.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="name"
          >
            Display Name
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <input
              class="form-control"
              id="name"
              maxlength="64"
              type="text"
              value="testApp"
            />
            <div
              class="form__help"
            >
              Specify the display name of your OAuth 2.0 application. You can use up to 64 characters.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="description"
          >
            Description
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <input
              class="form-control"
              id="description"
              maxlength="512"
              type="text"
              value="testing"
            />
            <div
              class="form__help"
            >
              Describe your OAuth 2.0 application.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="homepage"
          >
            Homepage
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <input
              class="form-control"
              id="homepage"
              maxlength="256"
              type="url"
              value="https://test.com"
            />
            <div
              class="form__help"
            >
              This is the URL for the homepage of the OAuth 2.0 application. Depending on your server configuration, use HTTP or HTTPS in your URL.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="icon_url"
          >
            Icon URL
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <input
              class="form-control"
              id="icon_url"
              maxlength="512"
              type="url"
              value="https://test.com/icon"
            />
            <div
              class="form__help"
            >
              (Optional) Specify the URL of the image for your OAuth 2.0 application. Use either HTTP or HTTPS in the URL.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="callbackUrls"
          >
            Callback URLs (One Per Line)
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <textarea
              class="form-control"
              id="callbackUrls"
              maxlength="1024"
              rows="3"
            >
              https://test.com/callback
https://test.com/callback2
            </textarea>
            <div
              class="form__help"
            >
              Specify the URIs to which the service redirects users after accepting or denying them authorization to your application, and handles authorization codes or access tokens. It must start with http:// or https://.
            </div>
          </div>
        </div>
        <div
          class="backstage-form__footer"
        >
          <a
            class="btn btn-tertiary"
            href="/test/integrations/oauth2-apps"
          >
            Cancel
          </a>
          <button
            class="btn btn-primary"
            id="saveOauthApp"
            type="submit"
          >
            Footer
          </button>
          <div>
            renderExtra
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/integrations/AbstractOAuthApp > should match snapshot, displays client error 1`] = `
<div>
  <div
    class="backstage-content"
  >
    <div
      class="backstage-header"
    >
      <h1>
        <a
          href="/test/integrations/oauth2-apps"
        >
          OAuth 2.0 Applications
        </a>
        <span
          class="backstage-header__divider"
        >
          <i
            class="fa fa-angle-right"
            title="Breadcrumb Icon"
          />
        </span>
        Header
      </h1>
    </div>
    <div
      class="backstage-form"
    >
      <div
        class="integration__icon"
      >
        <img
          alt="integration icon"
          src="https://test.com/icon"
        />
      </div>
      <form
        class="form-horizontal"
      >
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="is_public"
          >
            Is Public Client
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <label
              class="radio-inline"
            >
              <input
                name="is_public"
                type="radio"
                value="true"
              />
              Yes
            </label>
            <label
              class="radio-inline"
            >
              <input
                checked=""
                name="is_public"
                type="radio"
                value="false"
              />
              No
            </label>
            <div
              class="form__help"
            >
              If true, the OAuth 2.0 application is a public client (no client secret). Public clients must use PKCE for authorization. If false, the application is a confidential client with a client secret.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="name"
          >
            Display Name
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <input
              class="form-control"
              id="name"
              maxlength="64"
              type="text"
              value="testApp"
            />
            <div
              class="form__help"
            >
              Specify the display name of your OAuth 2.0 application. You can use up to 64 characters.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="description"
          >
            Description
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <input
              class="form-control"
              id="description"
              maxlength="512"
              type="text"
              value="testing"
            />
            <div
              class="form__help"
            >
              Describe your OAuth 2.0 application.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="homepage"
          >
            Homepage
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <input
              class="form-control"
              id="homepage"
              maxlength="256"
              type="url"
              value="https://test.com"
            />
            <div
              class="form__help"
            >
              This is the URL for the homepage of the OAuth 2.0 application. Depending on your server configuration, use HTTP or HTTPS in your URL.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="icon_url"
          >
            Icon URL
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <input
              class="form-control"
              id="icon_url"
              maxlength="512"
              type="url"
              value="https://test.com/icon"
            />
            <div
              class="form__help"
            >
              (Optional) Specify the URL of the image for your OAuth 2.0 application. Use either HTTP or HTTPS in the URL.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="callbackUrls"
          >
            Callback URLs (One Per Line)
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <textarea
              class="form-control"
              id="callbackUrls"
              maxlength="1024"
              rows="3"
            />
            <div
              class="form__help"
            >
              Specify the URIs to which the service redirects users after accepting or denying them authorization to your application, and handles authorization codes or access tokens. It must start with http:// or https://.
            </div>
          </div>
        </div>
        <div
          class="backstage-form__footer"
        >
          <div
            class="pull-left has-error"
          >
            <label
              class="control-label"
            >
              One or more callback URLs are required
            </label>
          </div>
          <a
            class="btn btn-tertiary"
            href="/test/integrations/oauth2-apps"
          >
            Cancel
          </a>
          <button
            class="btn btn-primary"
            id="saveOauthApp"
            type="submit"
          >
            Footer
          </button>
          <div>
            renderExtra
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
